# Basics-of-programming-Cpp-Softweare-Engineering-ITMO

./: README.md
labwork-10/: README.md
labwork-10/lib/: AST.h  CMakeLists.txt  interpreter.h  lexer.cpp  lexer.h  parser.h
labwork-10/tests/: CMakeLists.txt  function_test.cpp  illegal_ops_test.cpp  loop_and_branch_test.cpp  types_test.cpp
labwork-10/tests/mytests/: basic_ops_test.cpp  conditionals_test.cpp  func_test.cpp  lexer_test.cpp  list_test.cpp  loops_test.cpp  math_test.cpp  string_func_test.cpp  string_test.cpp  tests.cpp  variables_test.cpp
labwork-6/: main  main.cpp
labwork-6/cache/: cache_func.cpp  cache_func.h
labwork-6/main_p/: api_manager.cpp  api_manager.h
labwork-6/save_algo/: save_route.cpp  save_route.h
labwork-7/lib/: magic.cpp  t  unrolled_list.h
labwork-7/tests/: CMakeLists.txt  additional_tests.cpp  allocator_ut.cpp  exception_safety_ut.cpp  named_requirements_ut.cpp  no_default_constructible_ut.cpp  simple_ut.cpp
labwork-8/: README.md
labwork-8/lib/: processing.h
labwork-8/tests/: CMakeLists.txt  aggregate_by_key_ut.cpp  drop_nullopt_ut.cpp  filter_ut.cpp  flow_convertions_ut.cpp  join.cpp  join_ut.cpp  kv.cpp  out.cpp  split_expected_ut.cpp  split_ut.cpp  transform_ut.cpp  write_ut.cpp
labwork-9/: CMakeLists.txt
labwork-9/lib/: CMakeLists.txt  any.h  apply.h  scheduler.h  tuple.h
labwork-9/tests/: CMakeLists.txt  simple_ut.cpp
labwork1/: README.md  main  main.cpp
labwork2/: CMakeLists.txt  README.md
labwork2/lib/: number.cpp  number.h
labwork2/tests/: number_test.cpp
labwork3/: CMakeLists.txt  main.cpp
labwork3/bmp/: CMakeLists.txt  bmp_writer.cpp  bmp_writer.h
labwork3/functions/: CMakeLists.txt  functions.cpp  functions.h
labwork3/matrix/: CMakeLists.txt  matrix.cpp  matrix.h
labwork3/pars-args/: CMakeLists.txt  pars-args.cpp
labwork3/parser-tsv/: CMakeLists.txt  read-tsv.cpp
labwork3/sandpile/: CMakeLists.txt  sandpile.cpp  sandpile.h
labwork4/lib/: CMakeLists.txt
labwork4/lib/ArgParser/: ArgParser.cpp
labwork4/lib/Argument/: Argument.h
labwork4/tests/: CMakeLists.txt  argparser_test.cpp
labwork5/: main  main.cpp
labwork5/incl/: battlefield.h  game_info.h  strategy.h  strategy_manager.h
labwork5/src/: battlefield.cpp  strategy.cpp  strategy_manager.cpp
lаbwork4-BegаnоvR/lib/ArgParser/: ArgParser.h
(+3 files in other folders)
